--- a/src/public/css/order.css
+++ b/src/public/css/order.css
@@ -97,26 +97,6 @@ h1 {
   font-size: 36px;
 }
 
-h2 {
-  font-size: 30px;
-}
-
-h3 {
-  font-size: 24px;
-}
-
-h4 {
-  font-size: 18px;
-}
-
-h5 {
-  font-size: 15px;
-}
-
-h6 {
-  font-size: 13px;
-}
-
 /* ==========================================================================
    #BACKGROUND
    ========================================================================== */
@@ -231,6 +211,7 @@ body {
    ========================================================================== */
 .wrapper {
   margin: 0 auto;
+  margin-bottom: 55px;
 }
 
 .wrapper--w680 {
@@ -289,7 +270,7 @@ body {
 
 .btn-order {
   line-height: 55px !important;
-  margin-top: 40px;
+  margin-top: 25px;
   margin-bottom: 90px;
   display: grid;
   margin-left: auto;
@@ -390,8 +371,8 @@ button {
   margin-bottom: 0;
 }
 
-.m-b-23 {
-  margin-bottom: 23px;
+.m-b-25 {
+  margin-bottom: 25px;
 }
 
 .m-b-100 {
@@ -428,20 +409,15 @@ th {
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 27px;
   font-weight: bold;
   color: rgb(189, 0, 0);
 }
 
 .content {
-  margin-top: 90px;
-}
-
-.container {
   position: absolute;
   left: 50%;
-  margin-top: 190px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
 }
 
 .custom-table {
@@ -466,6 +442,7 @@ h2 {
   border-top: none;
   border-bottom: none !important;
 }
+
 .custom-table tbody th,
 .custom-table tbody td {
   color: rgb(56, 56, 56);
@@ -481,25 +458,30 @@ h2 {
   -o-transition: 0.3s all ease;
   transition: 0.3s all ease;
 }
+
 .custom-table tbody tr:not(.spacer):hover {
   -webkit-box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
 }
+
 .custom-table tbody tr th,
 .custom-table tbody tr td {
   background: #fff;
   border: none;
 }
+
 .custom-table tbody tr th:first-child,
 .custom-table tbody tr td:first-child {
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
 }
+
 .custom-table tbody tr th:last-child,
 .custom-table tbody tr td:last-child {
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
 }
+
 .custom-table tbody tr.spacer td {
   padding: 0 !important;
   height: 7px;
