--- a/src/views/orderBlood.ejs
+++ b/src/views/orderBlood.ejs
@@ -18,14 +18,16 @@
     />
 
     <!-- Checked icon -->
-    <link rel="stylesheet" href="../public/iconic/order_fonts/style.css" />
+    <link rel="stylesheet" href="../iconic/order_fonts/style.css" />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../public/css/order.css" />
-  </head>
+    <link rel="stylesheet" href="../css/order.css" />
 
+    <!-- Date format -->
+    <script src="/path/to/date-and-time.min.js"></script>
+  </head>
   <body>
-    <div class="page-wrapper p-t-95 p-b-30">
+    <div class="page-wrapper p-t-95">
       <div class="welcome m-b-100">
         <h1>Welcome to <span>BloodLife</span>, Hospital A</h1>
       </div>
@@ -34,16 +36,20 @@
       <div class="wrapper wrapper--w1070">
         <div class="card card-7">
           <div class="card-body">
-            <form class="form" method="" action="">
+            <form class="form" method="get" action="">
               <!-- Blood Product Type -->
               <div class="input-group input--large">
                 <label class="label">blood product type</label>
                 <div class="custom-select">
-                  <select class="input--style-1" name="producttype">
-                    <option>Red Blood Cells</option>
-                    <option>Platelets</option>
-                    <option>Plasma</option>
-                    <option>Whole Blood</option>
+                  <select
+                    class="input--style-1"
+                    name="producttype"
+                    id="producttype"
+                  >
+                    <option value="Red Blood Cells">Red Blood Cells</option>
+                    <option value="Platelets">Platelets</option>
+                    <option value="Plasma">Plasma</option>
+                    <option value="Whole Blood">Whole Blood</option>
                   </select>
                 </div>
               </div>
@@ -52,15 +58,19 @@
               <div class="input-group input--large">
                 <label class="label">blood type</label>
                 <div class="custom-select">
-                  <select class="input--style-1" name="bloodtype">
-                    <option>A RhD positive (A+)</option>
-                    <option>A RhD negative (A-)</option>
-                    <option>B RhD positive (B+)</option>
-                    <option>B RhD negative (B-)</option>
-                    <option>O RhD positive (O+)</option>
-                    <option>O RhD negative (O-)</option>
-                    <option>AB RhD positive (AB+)</option>
-                    <option>AB RhD negative (AB-)</option>
+                  <select
+                    class="input--style-1"
+                    name="bloodtype"
+                    id="bloodtype"
+                  >
+                    <option value="A+">A RhD positive (A+)</option>
+                    <option value="A-">A RhD negative (A-)</option>
+                    <option value="B+">B RhD positive (B+)</option>
+                    <option value="B-">B RhD negative (B-)</option>
+                    <option value="O+">O RhD positive (O+)</option>
+                    <option value="O-">O RhD negative (O-)</option>
+                    <option value="AB+">AB RhD positive (AB+)</option>
+                    <option value="AB-">AB RhD negative (AB-)</option>
                   </select>
                 </div>
               </div>
@@ -69,11 +79,11 @@
               <div class="input-group input--medium">
                 <label class="label">volume</label>
                 <div class="custom-select">
-                  <select class="input--style-1" name="volume">
-                    <option>200 mL</option>
-                    <option>300 mL</option>
-                    <option>350 mL</option>
-                    <option>500 mL</option>
+                  <select class="input--style-1" name="volume" id="volume">
+                    <option value="200">200 mL</option>
+                    <option value="300">300 mL</option>
+                    <option value="350">350 mL</option>
+                    <option value="500">500 mL</option>
                   </select>
                 </div>
               </div>
@@ -87,9 +97,10 @@
 
       <!-- Searching Result -->
       <div class="content">
-        <div class="container">
-          <h2 class="m-b-23">Searching Result</h2>
+        <form class="container" method="post" action="">
+          <h2 class="m-b-25">Searching Result</h2>
 
+          <!-- Result Table-->
           <div class="table-responsive custom-table-responsive">
             <table class="table custom-table">
               <!-- Column Title -->
@@ -107,52 +118,40 @@
                 </tr>
               </thead>
 
-              <!-- Data 1 -->
+              <!-- Blood stocks -->
+              <% if (orderBlood.length > 0) { %> <% for (var i = 0; i <
+              orderBlood.length; i++) { %>
               <tbody>
                 <tr scope="row">
                   <th scope="row">
                     <label class="control control--checkbox">
-                      <input type="checkbox" />
+                      <input
+                        type="checkbox"
+                        class="orderedBs"
+                        name="orderedBs"
+                        value="<%= orderBlood[i].bid %>"
+                      />
                       <div class="control__indicator"></div>
                     </label>
                   </th>
-                  <td>B0001</td>
-                  <td>01/06/2022</td>
-                  <td>30/06/2022</td>
+                  <td><%- orderBlood[i].bid %></td>
+                  <td><%- input_date[i] %></td>
+                  <td><%- input_date[i] %></td>
                 </tr>
                 <tr class="spacer">
                   <td colspan="100"></td>
                 </tr>
-
-                <!-- Data 2 -->
               </tbody>
-
-              <tbody>
-                <tr scope="row">
-                  <th scope="row">
-                    <label class="control control--checkbox">
-                      <input type="checkbox" />
-                      <div class="control__indicator"></div>
-                    </label>
-                  </th>
-                  <td>B0002</td>
-                  <td>01/06/2022</td>
-                  <td>30/06/2022</td>
-                </tr>
-                <tr class="spacer">
-                  <td colspan="100"></td>
-                </tr>
-
-                <!-- More data here -->
-              </tbody>
+              <% } } %>
             </table>
-
-            <!-- Order Button -->
-            <button class="btn-submit btn-order" type="submit">Order</button>
           </div>
-        </div>
+
+          <!-- Order Button -->
+          <button class="btn-submit btn-order" type="submit">Order</button>
+        </form>
       </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script>
       $(function () {
